--- a/Python Learning ProBook II.ipynb
+++ b/Python Learning ProBook II.ipynb
@@ -59,7 +59,11 @@
     "2. [While Loop](#while)<br>\n",
     "3. [Classes and Objects](#class)<br>\n",
     "4. [Data Files](#datafiles)<br>\n",
-    "    4.1. [Text Files](#datafiles-txt)<br>"
+    "    4.1. [Text Files](#datafiles-txt)<br>\n",
+    "    4.2. [CSV Files](#datafiles-csv)<br>\n",
+    "    4.3. [JSON Files](#datafiles-json)<br>\n",
+    "5. [Modules](#modules)<br>\n",
+    "6. [Exception Handling](#exception)<br>"
    ]
   },
   {
@@ -1811,7 +1815,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.2. CSV Files"
+    "## 4.2. CSV Files <a name=\"datafiles-csv\"></a>"
    ]
   },
   {
@@ -1854,7 +1858,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.3. JSON Files"
+    "## 4.3. JSON Files <a name=\"datafiles-json\"></a>"
    ]
   },
   {
@@ -1926,7 +1930,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Modules\n",
+    "# 5. Modules <a name=\"modules\"></a>\n",
     "    - Each module is a different file, which can be edited separately. Writing modules. Modules in Python are simply Python files with a .py extension. (learnpython.com)\n",
     "    - A module allows you to logically organize your Python code. Grouping related code into a module makes the code easier to understand and use. (Tutorialspoint)"
    ]
@@ -1996,7 +2000,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6. Exception handling"
+    "# 6. Exception handling <a name=\"exception\"></a>"
    ]
   },
   {
