--- a/Python Learning ProBook I.ipynb
+++ b/Python Learning ProBook I.ipynb
@@ -27,7 +27,7 @@
     {
      "data": {
       "text/plain": [
-       "'3.7.6'"
+       "'3.12.2'"
       ]
      },
      "execution_count": 1,
@@ -376,6 +376,7 @@
    "metadata": {},
    "source": [
     "We will start with assigning values to variables. the values can be of \"integer\" type or \"float\" type. Please consider the following rules before naming the variables.\n",
+    "\n",
     "    1. Names can not start with a number.\n",
     "    2. There can be no spaces in the name, use _ instead.\n",
     "    3. Can't use any of these symbols :'\",<>/?|\\()!@#$%^&*~-+\n",
@@ -948,7 +949,7 @@
       "True\n",
       "[1, 2, 3]\n",
       "(1, 2, 3)\n",
-      "{'red', 'green', 'blue'}\n",
+      "{'red', 'blue', 'green'}\n",
       "{'name': 'Alice', 'age': 42}\n",
       "hello\n"
      ]
@@ -1282,17 +1283,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter Table number: 4\n",
-      "4 * 1 = 4\n",
-      "4 * 2 = 8\n",
-      "4 * 3 = 12\n",
-      "4 * 4 = 16\n",
-      "4 * 5 = 20\n",
-      "4 * 6 = 24\n",
-      "4 * 7 = 28\n",
-      "4 * 8 = 32\n",
-      "4 * 9 = 36\n",
-      "4 * 10 = 40\n"
+      "2 * 1 = 2\n",
+      "2 * 2 = 4\n",
+      "2 * 3 = 6\n",
+      "2 * 4 = 8\n",
+      "2 * 5 = 10\n",
+      "2 * 6 = 12\n",
+      "2 * 7 = 14\n",
+      "2 * 8 = 16\n",
+      "2 * 9 = 18\n",
+      "2 * 10 = 20\n"
      ]
     }
    ],
@@ -1375,7 +1375,7 @@
     "print(d1)\n",
     "print(d2)\n",
     "print(d3)\n",
-    "print(d4) #note 1 is overwriiten by 3 because of same key"
+    "print(d4) #note 1 is over-written by 3 because of same key"
    ]
   },
   {
@@ -2521,7 +2521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
